Closed Bug 1709452 Opened 3 years ago Closed 3 years ago

Do not store display list building rect in frames with continuations

Categories

(Core :: Web Painting, defect, P2)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox89 --- fixed
firefox90 --- fixed

People

(Reporter: mikokm, Assigned: mikokm)

References

Details

Attachments

(1 file)

In bug 1707170 we uncovered an issue where retained display lists trip with frame continuations. If a modified frame is in the child list of the earlier unmodified continuation frame of the split frame, we cannot store display list building rect there, because we might not descend into that subframe tree.

Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/131f7f15056f
Do not store display list building rect in frames with continuations r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch

Comment on attachment 9220227 [details]
Bug 1709452 - Do not store display list building rect in frames with continuations r=mattwoodrow

Beta/Release Uplift Approval Request

  • User impact if declined: Possible invalidation issues: style changes might not update correctly.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The patch is simple: it only adds an additional limitation where display list rebuild rectangles can be stored. This trades some performance for correctness.
  • String changes made/needed:
Attachment #9220227 - Flags: approval-mozilla-beta?

Comment on attachment 9220227 [details]
Bug 1709452 - Do not store display list building rect in frames with continuations r=mattwoodrow

Approved for 89.0b14.

Attachment #9220227 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: