Bug 1709452 - Do not store display list building rect in frames with continuations r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D114290